--- a/Chapter 8 - Bayesian Statistical Inference.ipynb
+++ b/Chapter 8 - Bayesian Statistical Inference.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A bayesian model introduces a random variable $\\theta$, that represents the model, and postulates a __prior__ probability distribution $p_\\theta(\\theta)$. The following model, the __posterior__ probability distribution captures all the information that $x$ can provide about $\\theta$"
+    "A bayesian model introduces a random variable $\\Theta$, that represents the model, and postulates a __prior__ probability distribution $p_\\Theta(\\theta)$. The following model, the __posterior__ probability distribution captures all the information that $x$ can provide about $\\theta$"
    ]
   },
   {
@@ -184,6 +184,70 @@
    "source": [
     "# 8.1 Bayesian Inference and the Posterior Distribution"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To conduct bayesian inference, we take our unknown quantity, $\\Theta$ as a random variable, or a finite collection of random variables.  Our goal is to take $X$, which is a collection of known related random variables $(X_1, ..., X_n)$ which we call __Observations, Measurements,__ or an __Observation vector__.  We then assume that we know the joint distribution of $\\Theta$ and $X$.  This translates to the following:\n",
+    "- A Prior distribution $p_\\Theta$ or $f_\\Theta$, depending on whether $\\Theta$ is discrete or continuous\n",
+    "- A Conditional distribution $p_{X|\\Theta}$ or $f_{X|\\Theta}$, depending on whether $X$ is discrete or continuous"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once a value $x$ of $X$ has been observed, _a complete answer to the Bayesian inference problem is provided by the posterior distribution $p_{\\Theta|X}(\\theta|x)$ or $f_{\\Theta|X}(\\theta|x)$ of $\\Theta$_. It is determined by Bayes' rule, and tells everything there is to know about $\\Theta$, given the available information. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![title](figures/fig_8_1.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Summary of Bayesian Inference__\n",
+    "- We start with prior distribution $p_\\Theta$ or $f_\\Theta$ for the unknown random variable $\\Theta$\n",
+    "- We have a model $p_{X|\\Theta}$ or $f_{X|\\Theta}$ of the observation vector $X$.\n",
+    "- After observing $x$ of $X$, we form the posterior distribution of $\\Theta$, using Bayes' rule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Bayes' Rule versions__\n",
+    "\n",
+    "$\\Theta$ discrete, $X$ discrete: $p_{\\Theta|X}(\\theta|x)$ = $\\frac{p_\\Theta(\\theta)p_{X|\\Theta}(x|\\theta)}{\\sum_{\\theta '} p_\\Theta(\\theta')p_{X|\\Theta}(x|\\theta')}$\n",
+    "\n",
+    "$\\Theta$ discrete, $X$ continuous: $p_{\\Theta|X}(\\theta|x)$ = $\\frac{p_\\Theta(\\theta)f_{X|\\Theta}(x|\\theta)}{\\sum_{\\theta '} p_\\Theta(\\theta')f_{X|\\Theta}(x|\\theta')}$\n",
+    "\n",
+    "$\\Theta$ continuous, $X$ discrete: $f_{\\Theta|X}(\\theta|x)$ = $\\frac{f_\\Theta(\\theta)p_{X|\\Theta}(x|\\theta)}{\\int f_\\Theta(\\theta')p_{X|\\Theta}(x|\\theta')d\\theta'}$\n",
+    "\n",
+    "$\\Theta$ continuous, $X$ continuous: $f_{\\Theta|X}(\\theta|x)$ = $\\frac{f_\\Theta(\\theta)f_{X|\\Theta}(x|\\theta)}{\\int f_\\Theta(\\theta')f_{X|\\Theta}(x|\\theta')d\\theta'}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Another Summary__\n",
+    "\n",
+    "We have unknown $\\theta$, which is a value of the random variable $\\Theta$.  We assume the prior distribution of $\\Theta$, $p_\\Theta$ to be something reasonable, like a uniform distribution (this is the \"out and in the open for debate\" referenced in the introduction).  Then, we set up a conditional PDF, $p_{X|\\Theta}$, that represents the model of our observations, \"if our prior is true, I'm going to see $X$ like this. Now I can run an experiment, and take my observation vector, and use Bayes' rule to find a posterior PDF that I can use to predict $\\theta$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
